--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div id="container"></div>
     <script type="text/javascript" src="scripts/index.js"></script>
   </body>
 </html>
