Add clear grid functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div id="toolbar">
+      <button id="clearButton">Clear grid</button>
+    </div>
     <div id="container"></div>
     <script type="text/javascript" src="scripts/index.js"></script>
   </body>
