Change div colouring mode
With the css variable, only one color was allowed at a time (changing
the color would also change what was already painted). The colored-block
class was removed, now the background color is set inline for each div
and the clear grid was reworked to work with that approach.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <div id="toolbar">
       <button id="clearButton">Clear grid</button>
+      <label for="paintColor">Paint color: </label>
+      <input type="color" id="paintColor" placeholder="black" />
     </div>
     <div id="container"></div>
     <script type="text/javascript" src="scripts/index.js"></script>
