--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <button id="clearButton">Clear grid</button>
       <label for="paintColor">Paint color: </label>
       <input type="color" id="paintColor" placeholder="black" />
+      <label for="gridSize">Number of rows and columns: </label>
+      <input type="number" id="gridSize" value="16" />
+      <button id="updateGridSize">Update</button>
     </div>
     <div id="container"></div>
     <script type="text/javascript" src="scripts/index.js"></script>
