--- a/index.html
+++ b/index.html
@@ -6,15 +6,37 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div id="toolbar">
-      <button id="clearButton">Clear grid</button>
-      <label for="paintColor">Paint color: </label>
-      <input type="color" id="paintColor" placeholder="black" />
-      <label for="gridSize">Number of rows and columns: </label>
-      <input type="number" id="gridSize" value="16" />
-      <button id="updateGridSize">Update</button>
+    <div id="wrapper">
+      <div id="toolbar">
+        <h1>Options</h1>
+        <div>
+          <label for="paintColor">Paint color: </label>
+          <input type="color" id="paintColor" placeholder="black" />
+        </div>
+        <div>
+          <label for="borderStyle">Border style: </label>
+          <select name="borderStyle" id="borderStyle">
+            <option value="solid" selected>Solid</option>
+            <option value="dashed">Dashed</option>
+            <option value="dotted">Dotted</option>
+
+            <option value="none">None</option>
+          </select>
+        </div>
+        <div>
+          <label for="borderColor">Border color:</label>
+          <input type="color" id="borderColor" />
+        </div>
+        <button id="clearButton">Clear grid</button>
+        <div>
+          <label for="gridSize">Number of rows and columns: </label>
+          <input type="number" id="gridSize" value="16" />
+          <button id="updateGridSize">Update</button>
+        </div>
+      </div>
+      <div id="container"></div>
     </div>
-    <div id="container"></div>
+
     <script type="text/javascript" src="scripts/index.js"></script>
   </body>
 </html>
